Console changes to use the new storage webdav endpoint
Former-commit-id: 930e8abb664bcc5c839d4d75d5d48ad6d58a6b94